refactor layered architecture and add db layer
