# internal/model/product.go
@@ -2,8 +2,10 @@ package model
 
 // Product represents a product in the cashier system.
 type Product struct {
-	ID    int    `json:"id"`
-	Name  string `json:"name"`
-	Price int    `json:"price"`
-	Stock int    `json:"stock"`
+	ID           int    `json:"id"`
+	Name         string `json:"name"`
+	Price        int    `json:"price"`
+	Stock        int    `json:"stock"`
+	CategoryID   int    `json:"category_id"`
+	CategoryName string `json:"category_name,omitempty"`
 }
